fixed .gitignore file by not ignoring the database

--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,10 @@ instance/
 
 # OS specific files
 .DS_Store
-Thumbs.db
+# Thumbs.db
 
 # Log files
 *.log
+
 # Open your .gitignore file and add:
 flask_session/
